--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Mi Proyecto | Welcome</title>
+    <title>Mi Proyecto</title>
     
     <!-- Archivos CSS -->
     <link rel="stylesheet" href="css/foundation.min.css">
