--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Archivos JavaScript -->
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/foundation.js"></script>
-    <script src="js/motion-ui.min.js"></script>
+    <!-- <script src="js/motion-ui.min.js"></script> -->
 
     <!-- Código jQuery para Foundation -->
     <script>
